<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".change_sound">
        <TextView
            android:id="@+id/label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="100dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/Sounds"
            android:textAppearance="?android:attr/textAppearanceLarge"
            app:layout_constraintBottom_toTopOf="@+id/radioGroup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <RadioButton
                android:id="@+id/sound1"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:checked="true"
                android:onClick="onRadioButtonClicked"
                android:text="@string/Sound1" />
            <RadioButton
                android:id="@+id/sound2"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_below="@+id/sound1"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/Sound2" />
            <RadioButton
                android:id="@+id/sound3"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_below="@+id/sound2"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/Sound3" />
            <RadioButton
                android:id="@+id/sound4"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_below="@+id/sound3"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/Sound4" />
            <RadioButton
                android:id="@+id/sound5"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_below="@+id/sound4"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/Sound5" />
            <RadioButton
                android:id="@+id/sound6"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_below="@+id/sound5"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/Sound6" />
        </RadioGroup>
        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="8dp"
            android:onClick="setSoundClick"
            android:text="@string/set_sound"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
    </android.support.constraint.ConstraintLayout>
